--- a/style/_tamplate.scss
+++ b/style/_tamplate.scss
@@ -21,3 +21,270 @@
     font-style: normal;
 }
 
+/* Header Styles */
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 69px 162px 69px 162px;
+}
+.logo {
+    font-family: $font;
+    font-size: 38px;
+    font-weight: bolder;
+    color: $colordark;
+    display: flex;
+    gap: 1rem;
+}
+.logopic {
+    width: 36px;
+}
+.nav {
+    display: flex;
+    gap: 25px;
+    padding-left: 170px;
+}
+.nav a {
+    text-decoration: none; 
+    color: $colordark;
+    font-family:  $font;
+    font-size: 20px;
+    font-weight: bolder;
+}
+.search {
+    padding-left: 150px;
+}
+.searchfield {
+    width:375px;
+}
+.cartpic {
+    width:160px;
+}
+
+/* Footer Styles */
+.footer {
+    margin-top: 110px;
+    &__title {
+        font-family: $fonttext;
+        color: $colordark;
+    }
+    .container {
+        display: inline-flex;
+        width: 100%;
+        gap: 10rem;
+        justify-content: flex-start;
+        max-width: 100%;
+    }
+.utility-pages{
+    order: 3;
+    
+}
+.utility-pages ul li {
+    list-style: none;
+    font-family: $fonttext;
+    font-size: 18px;
+    color: $colordark;
+    padding-top: 2rem;
+    &:last-child {
+        padding-bottom: 5rem;
+    }
+    a {
+        text-decoration: none;
+        &:hover {
+            color: #191b1c;
+        }
+    } 
+}
+.cont-text  {
+    font-family: $fonttext;
+    font-size: 18px;
+    display: flex;
+    padding-top: 10px;
+}
+.about {
+    order: 2;
+    text-align: center;
+    border-left: 2px solid rgb(210, 206, 206);
+    border-right: 2px solid rgb(210, 206, 206);
+    padding-left: 4rem;
+    padding-right: 4rem;
+    margin-bottom: 4rem;
+}
+.about .logo {
+    padding-left: 9rem;
+}
+.about .follow {
+    display: flex;
+    padding-top: 3rem;
+    gap: 1rem;
+    padding-left: 7rem;
+    }
+.about.follow img {
+    width: 20px;
+    height: 20px;
+}
+.contact-us {
+    font-family: $fonttext;
+    font-size: 18px;
+    color: $colordark;
+    text-align: end;
+    display: block;
+    padding-left: 15rem;
+    a {
+        text-decoration: none;
+        color:inherit;
+        &:hover {
+            color: #191b1c;
+        }
+    }
+    .mail {
+        padding-bottom: 2rem;
+        padding-top: 2rem;
+    }
+    .phone {
+        padding-bottom: 2rem;
+    }
+}
+}
+.legal {
+    display:flex;
+    justify-content: center;
+    font-family: $fonttext;
+    color: $colordark;
+    font-size: 18px;
+    border-top: 2px solid rgb(210, 206, 206);
+    padding-top: 1rem;
+}
+
+@media screen and (max-width: 767px)
+{
+    .bannerpic,
+    .missionpic,
+    .utility-pages { display: none;
+}
+    header {
+    display: block;
+    padding: 2rem;
+    .nav,
+    .search {
+        padding-left: 0;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        gap: 5rem;
+    }
+    .searchfield {
+        width:36vw;
+    }
+    .cartpic {
+        width:15vw;
+    }
+}
+    .banner {
+    margin-top: 0;
+    .slogan { 
+        padding: 2rem;
+        .title {
+            width: 70%;
+            h1 {
+                font-size: 7vw;    
+            }
+        }
+}
+}
+    .centralpics {
+        margin: 1rem;
+        display: block;
+        padding: 0;
+}
+    .mission { 
+        margin-top: 2rem;
+        padding: 2rem;
+    .description {
+        width: 80%;
+    h2 {
+        font-size: 7vw;
+    }
+.cont-text {
+    font-size: 2vw;
+        }
+            }
+}
+.footer {
+.contact-us {
+    padding-left: 7rem;  
+}
+.about {
+    text-align:start;
+    align-items: start;
+    border-right: none;
+    padding-left: 7rem;
+    .follow,
+    .logo {
+        padding-left: 0;
+        }
+}
+}
+.legal {
+    border: none;
+    padding-left: 2rem;
+}
+}   
+
+@media screen and (min-width: 768px) and (max-width: 1023px)
+{
+header {
+    padding: 20px;
+    .nav {
+        padding-left: 40px;
+    }
+    .search {
+    padding-left: 40px;
+    .searchfield {
+        width:20vw;
+    }
+    .cartpic {
+        width: 9vw;
+    }
+}
+}
+.banner {
+    display:flex;
+}
+.centralpics {
+margin-top: 3rem;
+margin-left: 40rem;}
+.mission { 
+margin-top: 3rem;
+background-size: 100vw;
+display: flex;
+padding-left: 4rem;
+.missionpic { display: none;
+}
+.description {
+    width: 100vw;
+}
+
+}
+.footer {
+.utility-pages { display: none;
+}
+.contact-us {
+    padding-left: 5rem;  
+    width: 50%;
+}
+.about {
+    text-align:start;
+    align-items: start;
+    border-right: none;
+    padding-left: 5rem;
+    .follow,
+    .logo {
+        padding-left: 0;
+        }
+}
+}
+.legal {
+    border: none;
+    padding-left: 2rem;
+}
+}
