--- a/style/style.css
+++ b/style/style.css
@@ -232,6 +232,7 @@
 
 .block2 {
   width: 100%;
+  max-width: 100%;
   margin: 163px 263px 0 0;
   display: flex;
   background-color: #FFF;
@@ -239,7 +240,8 @@
 @media screen and (max-width: 768px) {
   .block2 {
     flex-direction: column;
-    margin: 50px 0 0 50px;
+    margin: 50px 0 0 0;
+    padding-left: 50px;
   }
 }
 .block2 .block2__images {
@@ -262,8 +264,8 @@
   .block2 .block2__images .block2__img_1 {
     top: 600px;
     left: 300px;
-    width: 366px;
-    height: 365px;
+    width: 266px;
+    height: 265px;
   }
 }
 .block2 .block2__images .block2__img_2 {
@@ -340,10 +342,11 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-}
+} 
 
 .block3 {
   width: 100%;
+  max-width: 100%;
   min-height: 1429px;
   background-color: #F9F8F8;
   margin-top: 150px;
@@ -441,17 +444,19 @@
 
 .block4 {
   width: 100%;
+  max-width: 100%;
   background-color: #FFF;
 }
 .block4 .block4__content {
   margin: 177px 534px 0 534px;
   max-width: 852px;
-  max-height: 184px;
+  min-height: 180px;
   text-align: center;
 }
 @media screen and (max-width: 768px) {
   .block4 .block4__content {
     margin: 50px 10px 0 10px;
+    width: 700px;
   }
 }
 .block4 .block4__content .block3__title_2 {
@@ -505,6 +510,7 @@
 
 .block5 {
   width: 100%;
+  max-width: 100%;
   background-color: #274C5B;
   text-align: center;
 }
@@ -545,6 +551,13 @@
   border-radius: 25px;
   background-color: #FFF;
 }
+@media screen and (max-width: 768px) {
+  .block5 .block5__item-block .block5__item .block5__img {
+    width: 300px;
+    height: 290px;
+  }
+}
+
 .block5 .block5__item-block .block5__item-title {
   padding-top: 24px;
   color: #FFF;
@@ -557,6 +570,7 @@
 
 .block6 {
   width: 100%;
+  max-width: 100%;
   background-color: #FFF;
   display: flex;
   justify-content: center;
@@ -684,3 +698,196 @@
   width: 350px;
   height: 81px;
 }/*# sourceMappingURL=style.css.map */
+
+/* Mobile adaptive */
+@media screen and (max-width: 425px) {
+  /* Block1 */
+  .block1 {
+    height: 100px;
+  }
+  h1 {
+    font-size: 1rem;
+  }
+
+  /* Block2 */
+  .block2 {
+    margin: 30px 0 0 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .block2 .block2__images .block2__img_1 {
+    display: none;
+  }
+  .block2 .block2__content {
+    width: 400px;
+  }
+  .block2 .block2__content .block2__title_2 {
+    padding-top: 10px;
+    width: 400px;
+  }
+  .block2 .block2__content .block2__text {
+    width: 400px;
+    gap: 20px;
+    padding-top: 14px;
+  }
+  .block2 .block2__content .block2__icons {
+    flex-direction: column;
+    padding-top: 30px;
+    gap: 30px;
+  }
+  .block2 .block2__content .block2__icons .block2__title-mid {
+    font-size: 20px;
+  }
+  .block2 .block2__content .block2__button {
+    padding-top: 30px;
+  }
+
+  /* Block3 */
+  .block3 {
+    margin-top: 50px;
+    padding-bottom: 30px;
+  }
+  .block3 .block3__part1 {
+    padding: 30px 0 0 30px;
+    gap: 10px;
+  }
+  .block3 .block3__part1 .block3__part1-content {
+    width: 400px;
+  }
+  .block3 .block3__part1 .block3__part1-content .block3__title_2 {
+    width: 400px;
+    padding-top: 6px;
+  }
+  .block3 .block3__part1 .block3__part1-content .block3__text_1 {
+    padding-top: 25px;
+  }
+  .block3 .block3__part1 .block3__part1-content .block3__fake-button_1 {
+    margin-top: 20px;
+  }
+  .block3 .block3__part1 .block3__part1-content .block3__text_2 {
+    padding: 12px 0 0 60px;
+    width: 400px;
+    height: 60px;
+  }
+  .block3 .block3__part1 .block3__part1-content .block3__fake-button_2 {
+    margin-top: 24px;
+  }
+  .block3 .block3__part1 .block3__part1_img {
+    border-radius: 45px;
+  }
+  .block3 .block3__part1 .block3__part1_img {
+      display: none;
+    }
+  .block3 .block3__part2 {
+    margin: 40px 0 0 0;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    align-items: center;
+    gap: 10px;
+  }
+  .block3 .block3__part2 .block3__part2-item {
+    height: 250px;
+    padding-top: 10px;
+  }
+
+  /* Block4 */
+  .block4 .block4__content {
+    margin: 30px 10px 0 10px;
+    width: 400px;
+  }
+  .block4 .block4__experts {
+      justify-content: center;
+      align-items: center;
+      margin: 5px 0 30px 0;
+  }
+  .block4 .block4__experts .block4__expert-block {
+    width: 400px;
+    height: 560px;
+  }
+  .block4 .block4__experts .block4__expert-block .block4__expert-photo {
+    width: 400px;
+  }
+  .block4 .block4__experts .block4__expert-block .block4__expert-name {
+    padding: 35px 0 0 28px;
+  }
+  .block4 .block4__experts .block4__expert-block .block4__expert-posicion {
+    font-size: 1.5rem;
+  }
+  .block4 .block4__experts .block4__expert-block .block4__expert-contacts {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+    margin-right: 20px;
+  }
+
+  /* Block5 */
+  .block5 .block5__title_1 {
+    padding-top: 30px;
+  }
+  .block5 .block5__title_2 {
+    font-size: 30px;
+  }
+  .block5 .block5__item-block {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 40px 0 50px 0;
+    justify-items: center;
+    align-items: center;
+  }
+  .block5 .block5__item-block .block5__item .block5__img {
+    width: 280px;
+    height: 250px;
+    border-radius: 25px;
+  }
+  .block5 .block5__item-block .block5__item-title {
+    padding-top: 15px;
+    font-size: 20px;
+  }
+  
+  /* Block6 */
+  .block6 .subscribe-block {
+    flex-direction: column;
+    gap: 20px;
+    margin: 20px 0 20px 0;
+    width: 420px;
+  }
+  .block6 .subscribe-block .block6__title {
+    padding: 50px 0 0 40px;
+  }
+  .block6 .subscribe-block .block6__input-box {
+    margin-top: 10px;
+    flex-direction: column;
+    gap: 6px;
+    padding-left: 40px;
+  }
+  
+
+  /* Separate blocks */
+  .subtitle {
+    color: #525C60;
+    font-family: "Open Sans", sans-serif;
+    font-size: 1em;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 165.4%;
+  }
+  
+  .h2 {
+    font-family: "Roboto-Bold";
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+  }
+  
+  .h3 {
+    color: #7EB693;
+    font-family: "Yellowtail-Regular";
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+}
+
